crates/rome_formatter/tests/specs/prettier/js/comments/call_comment.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: call_comment.js

---
# Input
```js
render( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

React.render( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

render?.( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

```

# Output
```js
render( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

React.render( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

render?.( // Warm any cache
  <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  container
);

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
  ┌─ call_comment.js:2:3
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: expected `:` but instead found `}`
  ┌─ call_comment.js:2:35
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                   ^ unexpected

error[SyntaxError]: expected `,` but instead found `anchorClassOn`
  ┌─ call_comment.js:2:37
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                     ^^^^^^^^^^^^^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
  ┌─ call_comment.js:2:56
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                        ^ unexpected

error[SyntaxError]: expected an expression but instead found '>'
  ┌─ call_comment.js:2:59
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                           ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found ','
  ┌─ call_comment.js:2:60
  │
2 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                            ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<ChildUpdates renderAnchor`
  ┌─ call_comment.js:7:3
  │
7 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: expected `,` but instead found `anchorClassOn`
  ┌─ call_comment.js:7:37
  │
7 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                     ^^^^^^^^^^^^^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
  ┌─ call_comment.js:7:56
  │
7 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                        ^ unexpected

error[SyntaxError]: expected an expression but instead found '>'
  ┌─ call_comment.js:7:59
  │
7 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                           ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found ','
  ┌─ call_comment.js:7:60
  │
7 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
  │                                                            ^ Expected an expression here

error[SyntaxError]: Invalid assignment to `<ChildUpdates renderAnchor`
   ┌─ call_comment.js:12:3
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │   ^^^^^^^^^^^^^^^^^^^^^^^^^^ This expression cannot be assigned to

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ call_comment.js:12:35
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │                                   ^ unexpected

error[SyntaxError]: expected `,` but instead found `anchorClassOn`
   ┌─ call_comment.js:12:37
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │                                     ^^^^^^^^^^^^^ unexpected

error[SyntaxError]: expected `:` but instead found `}`
   ┌─ call_comment.js:12:56
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │                                                        ^ unexpected

error[SyntaxError]: expected an expression but instead found '>'
   ┌─ call_comment.js:12:59
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │                                                           ^ Expected an expression here

error[SyntaxError]: expected an expression but instead found ','
   ┌─ call_comment.js:12:60
   │
12 │   <ChildUpdates renderAnchor={true} anchorClassOn={true} />,
   │                                                            ^ Expected an expression here


```


